--- a/style/hi.css
+++ b/style/hi.css
@@ -7,7 +7,7 @@
 
 /* Body Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /* Background Styles */
